[project]
name = "audiobook-generator"
version = "0.1.0"
description = ""
authors = [{ name = "Marcus Tanner", email = "kritiosboy@gmail.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "kokoro>=0.9.4,<0.10",
    "soundfile>=0.13.1,<0.14",
    "ipython>=9.6.0,<10",
    "sounddevice>=0.5.3,<0.6",
    "ebooklib>=0.18,<0.19",
    "beautifulsoup4>=4.12.0,<5",
    "lxml>=5.0.0,<6",
    "pydub>=0.25.1,<0.26",
    "mutagen>=1.47.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
